added input note card with save button

--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ body {
   align-items: center;
   margin: 10px 0px;
 }
-.notesTitle {
+.noteTitle {
   color: #fff;
   font-size: 38px;
   font-family: "Montserrat";
